
	* Fixed bug #16147: getRecordOverlay fetches "Versioning Preview Overlay" but does not return the fields _ORIG_uid and _ORIG_pid (Thanks to Andreas Kiessling)

2010-11-17  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #16453: User Admin>List Users Online uses old styling (Thanks to Felix Kopp)
	* Fixed bug #16452: References table in Info popup uses old styling (Thanks to Felix Kopp)

2010-11-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16447: htmlArea RTE: Missing tooltip label for horizontal rule

2010-11-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to feature #16420: [linkvalidator] Fix fatal error in class.tx_linkvalidator_modfunc1.php
	* Added feature #16420: Add link validator extension (Thanks to Patrick Gaumond)

2010-11-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16364: EDITPANEL cObject is missing
	* Updated Workspaces to version 4.5.0beta1b. See their ChangeLog for details.
	* Fixed bug #13610: t3lib_BEfunc::viewOnClick - Hook request (Thanks to Mick Klapper)
	* Fixed bug em task or for update fixed
	* Added feature #16295: Optimize stdWrap usage for TypoScript content element FORM (Thanks to Jo Hasenau)
	* Added feature #16287: Optimize stdWrap usage for TypoScript content element IMGTEXT (Thanks to Jo Hasenau)
	* Added feature #16382: Optimize stdWrap usage for TypoScript content element MULTIMEDIA (Thanks to Jo Hasenau)
	* Added feature #16381: Optimize stdWrap usage for TypoScript content element MEDIA (Thanks to Jo Hasenau)
	* Fixed bug #16435: Headers in GridView are rendered wrong
	* Follow-up to #16315: fixed an issue in ext_conf_template with mod menu
	* Fixed bug #16434: GridView does not show cells if they are not mapped to any column
	* Added feature #16334: Make FlexForms editable via TSConfig and group access lists (Thanks to Kai Vogel)
	* Fixed bug #16320: Prepare userauthgroup to support custom staging (Thanks to Tolleiv Nietsch)